# ai-novel

./: .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.js  eslint.risk.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: hookify.codegraph-first.local.md
.github/workflows/: quality.yml  release.yml
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
.omo/: boulder.json
.omo/evidence/: task-1-qa.ts
.omo/plans/: foreshadow-phase2.md  foreshadow-phase3.md  notes-layer2-chapter-link.md
.omo/run-continuation/: ses_097307021ffek4PXYoNqc8Djef.json  ses_0978ec2c8ffeYviblX3529rXgV.json  ses_09b0b012dffeIvOy7TA7ZDSQHA.json  ses_09b840d52fferVgr1QLL7NpXdn.json  ses_09c5f9339ffesBnLgcO25SbykX.json  ses_0a0020177ffeZDLcDZqjnIG83q.json  ses_0a029c0bbffeVlLb0U5gUsFscZ.json  ses_0a0376f2effeLVCwYX6AK0d661.json  ses_0a0476b1fffeLVaQh0OqDXeYAW.json  ses_0a06520feffetddNpzLQHbb02J.json  ses_0a0b66d9fffeuSOSA2XqlRwJo3.json  ses_0a0eb4c5effeymoIRSmtJ4E2bP.json  ses_0a12fde66ffemKLPIPAbdLOcUp.json  ses_0a1d059aeffeMr1rnS81WieGPW.json  ses_0a5b6289bffe59ilMjuguGQvzt.json  (+10 more)
doc/: AI改写扩写功能补充计划.md  Vite构建体积提示后续优化.md  bug修正.md  design.md  user-manual.md  世界观模块改进计划.md  伏笔模块完善计划.md  伏笔逻辑改造计划.md  关于与版本检查功能实施方案.md  关系图模块实施计划.md  关系图模块改造计划.md  关系图模块补完计划.md  关系图洞察改造计划.md  写作模块改进计划.md  分页组件规划.md  前端拆分与构建体积优化分步方案.md  卷章节目录与大纲关联公共方案.md  变更记录.md  备注模块完善计划.md  大纲模块改进计划.md  审查模块改进计划.md  搜索模块设计说明.md  新手起步建议.md  灵感模块改进计划.md  章节字数三级优先级方案.md  章节脉络模块重构实施方案.md  素材库分阶段改造计划.md  统计模块设计说明.md  角色模块改进计划.md  通用弹窗组件规划.md  通用按钮组件规划.md
scripts/: material-phase3-ui-check.mjs  sync-version.mjs
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: archive.rs  export.rs  material.rs  material_document.rs  mod.rs  resource.rs  search.rs  stats.rs  vectorstore.rs  version.rs
src-tauri/tests/fixtures/: README.md
(+320 files in other folders)
