[package]
name = "ai-novel"
version = "0.1.0"
description = "AI Novel Writer"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_novel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
