[package]
name = "ai-novel"
version = "0.3.0"
description = "AI-powered desktop writing tool for web novels."
authors = ["yg1987"]
license = "MIT"
repository = "https://github.com/yg1987/ai-novel"
homepage = "https://github.com/yg1987/ai-novel"
edition = "2021"

[lib]
name = "ai_novel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = [] }
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
epub-builder = "0.8.3"
tar = "0.4.46"
flate2 = "1.1.9"
encoding_rs = "0.8.35"
html5ever = "0.39.0"
markup5ever_rcdom = "0.39"
quick-xml = "0.41.0"
zip = { version = "8.3.0", default-features = false, features = ["deflate"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "blocking", "gzip", "brotli", "deflate"] }
url = "2.5.8"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
